[gd_scene load_steps=8 format=2]

[ext_resource path="res://PixelArt/UI/Stats/bosshealthbarUI.png" type="Texture" id=1]
[ext_resource path="res://PixelArt/UI/Stats/bosshealthbarUI_progress.png" type="Texture" id=2]
[ext_resource path="res://UI/Stats/BossHealthBarUI.gd" type="Script" id=3]
[ext_resource path="res://PixelArt/UI/Stats/bosshealthbarUI_under.png" type="Texture" id=4]
[ext_resource path="res://Others/Fonts/ARCADECLASSIC.TTF" type="DynamicFontData" id=5]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.010582, 1 )
colors = PoolColorArray( 0.238281, 0.0381622, 0.0381622, 1, 0.542969, 0.169678, 0.169678, 1 )

[sub_resource type="DynamicFont" id=2]
size = 12
extra_spacing_top = 3
font_data = ExtResource( 5 )

[node name="BossHealthBarUI" type="Control"]
margin_right = 568.0
margin_bottom = 320.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
gradient = SubResource( 1 )

[node name="BossHealthBarUIunder" type="TextureProgress" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 197.0
margin_bottom = 37.0
value = 60.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 2 )
tint_progress = Color( 0.682353, 0.529412, 0.529412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossHealthBarUI" type="TextureProgress" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 197.0
margin_bottom = 37.0
value = 50.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -13.0
margin_top = 9.0
margin_right = 227.0
margin_bottom = 56.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 1.0
margin_top = 6.0
margin_right = 212.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.745098, 0.67451, 0.564706, 1 )
text = "Psychic  Boss"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="value_changed" from="BossHealthBarUIunder" to="." method="_on_BossHealthBarUI_value_changed"]
[connection signal="value_changed" from="BossHealthBarUI" to="." method="_on_BossHealthBarUI_value_changed"]
